--- a/app/src/main/res/layout/value_index_dialog.xml
+++ b/app/src/main/res/layout/value_index_dialog.xml
@@ -7,13 +7,25 @@
     android:padding="20dp">
 
 
+    <TextView
+        android:id="@+id/tvActionHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:text="Action"
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+
     <EditText
         android:id="@+id/edtDialogIndex"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Position"
         android:layout_margin="10dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvActionHeader"
         tools:layout_editor_absoluteX="20dp" />
 
     <EditText
