--- a/app/src/main/res/values/genders.xml
+++ b/app/src/main/res/values/genders.xml
@@ -1,3 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <string-array name="genders_list">
+        <item>Male</item>
+        <item>Female</item>
+        <item>Other</item>
+    </string-array>
+
 </resources>
